WindGroup Dev/src/objects/Payment_Arrangement__c.object
<CustomObject>
    <description>This is linked to Vendor to manage Vendor Payment Terms</description>
    <fields>
        <fullName>Payment_Due__c</fullName>
        <label>Payment Due</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Payment_Due</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <label>Payment Term</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Seq_No__c</fullName>
        <label>Seq No.</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Payment_Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Payment Arrangement</label>
    <nameField>
        <label>Payment Arrangement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Arrangement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>